--- a/senpick/static/css/sidebar2.css
+++ b/senpick/static/css/sidebar2.css
@@ -81,5 +81,5 @@
   -ms-overflow-style: none;
   flex-shrink: 0;
   /* Adjust height based on header */
-  height: calc(100vh - 100px);
+  max-height: calc(100vh - 100px);
 }
