--- a/senpick/app/templates/chat.html
+++ b/senpick/app/templates/chat.html
@@ -50,7 +50,7 @@
       {
         title: "1/5",
         question: "누구의 선물을 준비하고 계신가요?",
-        options: [ "부모", "형제", "친구", "연인/배우자", "직장 동료/상사", "지인", "스승/멘토", "아이/청소년", "기타"],
+        options: [ "가족", "친구", "연인·배우자", "직장 동료", "학교·멘토", "지인·이웃", "반려동물", "기타"],
         type: "checkbox"
       },
       {
@@ -69,8 +69,9 @@
         title: "4/5",
         question: "어떤 기념일이나 특별한 날을 위한 선물인가요?",
         options: [
-          "생일", "결혼/웨딩", "승진/입사/퇴사", "입학/졸업",
-          "감사/고마움", "격려/응원", "명절/연말/새해", "그냥"
+          "생일", 
+          // "결혼/웨딩", "입학/졸업", "감사/고마움", "격려/응원", 
+          "연애기념일", "결혼·집들이", "출산·돌", "합격·응원", "승진/입사/퇴사", "건강·케어", "명절·기념일", "감사·고마움", "사과·미안함", "기타·기분전환"
         ],
         type: "checkbox"
       },
