--- a/senpick/app/templates/layout/sidebar2.html
+++ b/senpick/app/templates/layout/sidebar2.html
@@ -2,7 +2,7 @@
 <div class="sidebar-right collapsed" id="sidebar-right">
     <!-- 상단 헤더 (브랜드/토글) -->
     <div class="sidebar-header" style="display: block; margin-top: 24px; padding-left: 10px; padding-bottom: 0;">
-        <button class="sidebar-history menu-btn tooltip" title="선물 추천 히스토리 닫기">
+        <button class="sidebar-history menu-btn tooltip">
             <span class="tooltip-text">선물 추천 히스토리 닫기</span>
             <img
                 src="{% static 'images/gift.svg' %}"
@@ -17,7 +17,7 @@
 </div>
 <div class="floating-history" onclick="clickFloatingHistory()">
     <div>
-        <button class="sidebar-history menu-btn tooltip" title="선물 추천 히스토리 열기">
+        <button class="sidebar-history menu-btn tooltip">
             <span class="tooltip-text">선물 추천 히스토리 열기</span>
             <img
                 src="{% static 'images/gift.svg' %}"
