feat guest chat

--- a/senpick/app/templates/chat.html
+++ b/senpick/app/templates/chat.html
@@ -261,6 +261,7 @@
           );
           chatHistory.scrollTop = chatHistory.scrollHeight;
           const chatForm = document.getElementById('chat-form');
+          startButton.disabled = true;
           chatForm.disabled = true
           fetch('/chat/start/', {
               method: 'POST',
