--- a/senpick/static/css/chat.css
+++ b/senpick/static/css/chat.css
@@ -75,7 +75,7 @@ body {
 /* 공통 챗 메시지 스타일 */
 .chat-msg {
   display: inline-block;
-  max-width: 68%;
+  max-width: 80%;
   margin: 40px auto 0 0;  
   padding: 20px;
 
@@ -193,5 +193,50 @@ body {
   color: #333;
 }
 
+.guest-message {
+  padding: 14px;
+}
+
+.sidebar-right .guest-message {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  height: calc(100vh - 57px);
+}
+
+.guest-message span {
+  color: #666;
+  font-size: 14px;
+  font-weight: bold;
+}
+
+.sidebar-right .guest-message span {
+  font-size: 20px;
+}
+
+.guest-message p {
+  color: #666;
+  font-size: 14px;
+}
+
+.sidebar-right .guest-message p {
+  font-size: 16px;
+}
+
+.guest-message button {
+  background-color: #F5F5F8;
+  color: #666;
+  border: none;
+  border-radius: 10px;
+  width: fit-content;
+  display: inline-block;
+  padding: 14px 20px;
+  font-size: 14px;
+  cursor: pointer;
+  width: 100%;
+  margin-top: 8px;
+}
 
 
