--- a/senpick/app/templates/layout/sidebar.html
+++ b/senpick/app/templates/layout/sidebar.html
@@ -23,7 +23,16 @@
       <img src="{% static 'images/chat_logo.png' %}" alt="Chat">
       <span class="btn-label">Chat</span>
     </div>
+    {% if request.session.type != "guest" %}
     <ul class="chat-list"></ul>
+    {% else %}
+    <div class="guest-message">
+      <div><span>아직 회원이 아니시군요!</span></div>
+      <div><span>지금 이 대화는 저장되지 않아요.</span></div>
+      <p>로그인하시면, 지난 추천을 다시 꺼내보고, 선물 히스토리를 한눈에 확인할 수 있어요.</p>
+      <p>센픽이 그 모든 선물들과 담긴 마음들을 따뜻하게 기억해둘게요.</p>
+    </div>
+    {% endif %}
     {% if is_birth_today %}
     <div class="menu-btn-row" id="gift-btn" onclick="location.href=`{% url 'birth' %}`">
       <img src="{% static 'images/gift.svg' %}" alt="Gift">
@@ -36,7 +45,11 @@
     <div class="divider-line"></div>
     <div class="brand-bar">
       <a href="{% url 'mypage' %}" style="display: flex; align-items: center; text-decoration: none;">
+        {% if request.session.type == "guest" %}
+        <img src="{% static 'images/bottom_logo_white.svg' %}" alt="Brand" class="brand-logo">
+        {% else %}
         <img src="{% static 'images/bottom_logo.svg' %}" alt="Brand" class="brand-logo">
+        {% endif %}
         <span class="brand-label">{{request.session.nickname}}</span>
       </a>
       <a href="{% url 'logout' %}" class="brand-link tooltip">
